[package]
name = "mdbook-linkcheck"
version = "0.7.7"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
description = "A backend for `mdbook` which will check your links for you."
license = "MIT"
edition = "2018"
documentation = "https://docs.rs/mdbook-linkcheck"
repository = "https://github.com/Michael-F-Bryan/mdbook-linkcheck"
readme = "README.md"

[[bin]]
name = "mdbook-linkcheck"
path = "src/bin/mdbook-linkcheck.rs"
doc = false

[dependencies]
anyhow = "1.0.28"
codespan = { version = "0.11.1" }
codespan-reporting = "0.11"
dunce = "1.0.0"
env_logger = "0.9"
http = "0.2"
linkcheck = "0.4"
log = "0.4"
mdbook = { version = "0.4", default-features = false }
pulldown-cmark = "0.8.0"
regex = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["native-tls-vendored"]}
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread"] }

[dev-dependencies]
pretty_assertions = "1"
toml = "0.5"

[workspace]
members = ["xtask"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.21.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = true

[badges]
maintenance = { status = "passively-maintained"}

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
